# atende_py

./: .env.example  .gitignore  .pre-commit-config.yaml  AI_DEPENDENCIES_FIX.md  Dockerfile  ENTERPRISE_STRUCTURE.md  FINAL_CORRECTIONS_SUMMARY.md  GITHUB_ACTIONS_FIXES.md  LICENSE.md  Makefile  README.md  SECURITY_FINAL_RESOLUTION.md  SECURITY_IGNORED_VULNS.md  WHATSAPP_SETUP.md  app.py  final_validation.py  main.py  pyproject.toml  requirements.txt  security_report.json  simulate_github_actions.py  test_security_scan.py  validate_system.py  vulns.json
.github/workflows/: ci.yml
src/controllers/: chatbot_controller.py  whatsapp_controller.py
src/database/: consulta_repository.py  conversa_repository.py  database_manager.py
src/models/: consulta.py  conversa.py
src/services/: ai_service.py  chatbot_service.py  whatsapp_service.py
static/css/: dashboard.css
static/js/: dashboard.js
templates/: dashboard.html
tests/: README.md  run_all_tests.py  test_chatbot_integration.py  test_chatbot_integration_standalone.py  test_models.py
